--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-image-picker": "^1.1.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
